objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-3</fullName>
                </value>
                <value>
                    <fullName>4-6</fullName>
                </value>
                <value>
                    <fullName>7-9</fullName>
                </value>
                <value>
                    <fullName>9-12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stu_ID__c</fullName>
        <label>Stu ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stu_Name__c</fullName>
        <label>Stu Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <recordTypes>
        <fullName>Primary_record_type</fullName>
        <active>true</active>
        <label>Primary record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secondary_record_type</fullName>
        <active>true</active>
        <label>Secondary record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>